2002-11-27  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-stack.c (get_frame_name): Use get_frame_type
	instead of deprecated_frame_in_dummy.
	* generic/gdbtk-cmds.c (gdb_loc): Ditto.

2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	* generic/gdbtk-stack.c (gdb_selected_frame): Use get_frame_base
	instead of FRAME_FP.  Mention that get_frame_id() should be used.
	
2002-11-19  Andrew Cagney  <ac131313@redhat.com>

	* generic/gdbtk-cmds.c (gdb_loc): Use get_frame_type instead of
	->signal_handler_caller.
	* generic/gdbtk-stack.c (get_frame_name): Ditto.
	(get_frame_name): Ditto.

2002-11-12  Andrew Cagney  <ac131313@redhat.com>

	From 2002-11-11 David Carlton <carlton@math.stanford.edu>
	* generic/gdbtk-stack.c (get_frame_name): Replace call to
	frame_in_dummy with one to deprecated_frame_in_dummy.
	* generic/gdbtk-cmds.c (gdb_loc): Ditto.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	

	* library/srctextwin.itb (do_key): Add arg to
	print call.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/data.ith: Deleted.
	* library/data.itb: Deleted.
	
2002-11-11  Martin M. Hunt  <hunt@redhat.com>		

	* library/memwin.itb: Supply arg to _update_address.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/toolbar.tcl: Deleted this obsolete file.
	* library/tclIndex: Rebuilt.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>		

	* library/srcbar.itcl (create_help_menu): For unix systems,
	if compatibility is set to KDE or GNOME, put the help menu
	in the right place. Otherwise put it on the far right, like
	Motif does.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/helpviewer.tcl: New file. Finds
	an appropriate help browser and displays the help files.

	* library/vartree.itb: Fix open_help calls.
	
	* library/helpviewer.ith: Deleted.
	* library/helpviewer.itb: Deleted.
	
	* library/prefs.tcl (pref_set_defaults): Remove 
	pref gdb/help/browser. Add pref gdb/help/browsername.  
	We couldn't simply rename because it would break older 